<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RaspberryRadio</string>
    <string name="action_settings">Settings</string>
    <string name="action_station">Stations</string>
    <string name="add_server">Add</string>
    <string name="image_text"></string>
    <string name="title_bar_slide">Sliding Title Bar</string>
    <string name="album_image">Album Image</string>
    <string name="prev">Previous Station</string>
    <string name="stop">Stop playing</string>
    <string name="play">Start playing</string>
    <string name="next">Next Station</string>
    <string name="server_settings_title">Server Settings</string>
    <string name="station_settings_title">Station Settings</string>
    <string name="server_name">Server Name</string>
    <string name="station_name">Station Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="server_ip">Server IP</string>
    <string name="server_port">Server Port</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="disconnect">Disconnect</string>
    <string name="no_song_playing">No song is currently playing</string>
    <string name="no_song_name">Information about this song can not be found</string>
    <string name="station_ip">Station IP</string>
    <string name="leadbolt_ad_id">290441066</string>
</resources>