<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/album_image"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="4.59"
        android:contentDescription="@string/album_image"
        android:gravity="center_vertical|center_horizontal"
        android:scaleType="center"
        android:src="@drawable/default_album_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center" >

        <ImageButton
            android:id="@+id/prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/prev"
            android:src="@drawable/ic_action_playback_prev" />

        <ImageButton
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/stop"
            android:src="@drawable/ic_action_playback_stop" />

        <ImageButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/play"
            android:src="@drawable/ic_action_playback_play" />

        <ImageButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next"
            android:src="@drawable/ic_action_playback_next" />
    </LinearLayout>

</LinearLayout>