<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".StationSettingsActivity" >

    <TextView
        android:id="@+id/settings_station_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" >
    </TextView>

    <TextView
        android:id="@+id/settings_station_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:paddingLeft="5dp"
            android:text="@string/station_name" />

        <EditText
            android:id="@+id/settings_station_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:ems="10"
            android:enabled="false"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:paddingLeft="5dp"
            android:text="@string/station_ip" />

        <EditText
            android:id="@+id/settings_station_ip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:ems="10"
            android:enabled="false"
            android:inputType="none" >
        </EditText>
    </LinearLayout>

    <View
        android:id="@+id/button_dividerHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:background="?android:attr/dividerHorizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp" >

        <Button
            android:id="@+id/settings_station_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <View
            android:id="@+id/button_dividerVertical2"
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"
            android:background="?android:attr/dividerVertical" />

        <Button
            android:id="@+id/settings_station_delete"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />
        <Button
            android:id="@+id/settings_station_save"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="@string/save" />
        
    </LinearLayout>

</LinearLayout>